Update on html file

--- a/Page29.html
+++ b/Page29.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Page29.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Reyads page29</title>
+    <title>Reyad page29</title>
 </head>
 <body>
     <div class="all">
